# Karnix

./: CMakeLists.txt  LICENSE  README  m
cmake/toolchains/: linux_toolchain.cmake
editor/: CMakeLists.txt
editor/include/: res.h
editor/src/: main.c
include/: defines.h
include/core/: app.h  assert.h  event.h  log.h  window.h
include/renderer/: core.h  types.h
src/: main.c
src/core/: app.c  assert.c  event.c  log.c  window.c
src/renderer/: core.c
tests/: CMakeLists.txt  test_main.c
tools/: embed_resources.py
